crates/wdl-grammar/tests/parsing/missing-comma/source.errors
error: expected `,`, but found identifier
  ┌─ tests/parsing/missing-comma/source.wdl:9:9
  │
8 │         bar: "bar"
  │                  - consider adding a `,` after this
9 │         baz: "baz",
  │         ^^^ unexpected identifier

