crates/wdl-grammar/tests/parsing/missing-comma/source.wdl
# This is a test of a missing comma delimiter.

version 1.1

workflow test {
    Map[String, String] map = {
        foo: "foo",
        bar: "bar"
        baz: "baz",
        qux: "qux"
    }
}
